--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vmc-cards-alt",
+  "name": "vmc-cards",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:vmc-cards-alt": "node dist/vmc-cards-alt/server/server.mjs"
+    "serve:ssr": "npx serve dist/vmc-cards/browser"
   },
   "prettier": {
     "overrides": [
