--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr": "npx serve dist/vmc-cards/browser"
+    "serve:static": "npx serve dist/vmc-cards/browser"
   },
   "prettier": {
     "overrides": [
