--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -16,10 +16,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 22.12.0
-          cache: yarn
 
       - name: Install dependencies
-        run: corepace enable && yarn install --immutable
+        run: corepack enable && yarn install --immutable
 
       - name: Build
         run: yarn build
