--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --configuration=production",
+    "build:analyze": "ng build --configuration=production --stats-json && npx esbuild-visualizer --metadata dist/vmc-cards/stats.json && npx serve stats.html",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:static": "npx serve dist/vmc-cards/browser"
