--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -18,10 +18,10 @@ jobs:
           node-version: 22.12.0
 
       - name: Install dependencies
-        run: corepack enable && yarn install --immutable
+        run: npm ci
 
       - name: Build
-        run: yarn build
+        run: npm run build
 
       - name: Deploy to Github Pages 🚀
         uses: JamesIves/github-pages-deploy-action@v4.5.0
